--- a/source/_posts/对象实例的空间大小.md
+++ b/source/_posts/对象实例的空间大小.md
@@ -100,6 +100,7 @@ NSLog(@"%d", y); //32
 @property (nonatomic, copy) NSString *address;   // 8 bytes
 @property (nonatomic, assign) int age;           // 4 bytes
 @property (nonatomic, assign) CGFloat height;    // 8 bytes
+@property (nonatomic, assign) char ch;           // 1 bytes
 
 @end
 ```
