--- a/source/_posts/你的视力还好吗.md
+++ b/source/_posts/你的视力还好吗.md
@@ -6,10 +6,13 @@ tags: [iOS, DPI, Inch]
 
 事情的起因是这样的，项目需要做一个辅助孩子测试视力的功能，然后，还是好好想想怎么实现功能吧。
 
-其实吧，功能也很简单，就一个要点，**让 “E” 以实际的大小显示在屏幕上**。好吧，什么是实际的大小呢？大家都知道，现在测试视力时标准的又两种距离：3m 和 5m,我们项目只考虑 3m 这一种距离。那么 3m 时 "E" 的标准距离是多少呢，请看下图
-![E.png](https://s2.loli.net/2021/12/24/V6JXw2NOERKM8Wj.png)
+其实吧，功能也很简单，就一个要点，**让 “E” 以实际的大小显示在屏幕上**。好吧，什么是实际的大小呢？大家都知道，现在测试视力时标准的又两种距离：3m 和 5m,我们项目只考虑 3m 这一种距离。那么 3m 时 "E" 的标准距离是多少呢?
 
 <!--more-->
+
+请看下图
+![E.png](https://s2.loli.net/2021/12/24/V6JXw2NOERKM8Wj.png)
+
 
 最初想的很简单，设计MM把图按照实际大小切给我就好了嘛，不是就是显示个图片么，分分钟的事情，搞定。如果真的这么简单，谁还在这瞎扯淡...
 
